# tmlr

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  go.mod  go.sum
cmd/tmlr-client/: main.go
internal/cmd/: login.go  root.go  version.go
internal/http-api/: http.go  login.go  package.go
src/: cmd_create.rs  cmd_list.rs  error.rs  main.rs
src/cli/: config.rs  create.rs  delete.rs  list.rs  mod.rs
src/settings/: error.rs  mod.rs
src/timeular/: data.rs  http.rs  mod.rs
src/timeular/http/: activity.rs  auth.rs  mod.rs  space.rs  tnm.rs
src/timeular/http/data/: mod.rs  space.rs
src/util/: date.rs  logging.rs  mod.rs
